fixed button alignment

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6,7 +6,7 @@ body {
     flex-direction: column;
     /* /*Add Background */
     background-image: url("../images/newsPaper.jpg");
-    background-color: #F2F6D0
+    background-color: rgb(19, 19, 18)
 }
 
 main {
@@ -51,4 +51,8 @@ main {
  textarea {
      height: 200px;
      font-size: 18px;
+ }
+
+ #scrape {
+     margin-top: 15px;
  }
